--- a/Frontend/styles/LoginRegister.css
+++ b/Frontend/styles/LoginRegister.css
@@ -7,6 +7,7 @@
     display: flex;
     height: 98vh;
     padding: 6px;
+    background-color: #9fd4c2
 }
 
 .logo{
@@ -33,6 +34,7 @@
     width: 56%;
     padding: 24px;
     border-radius: 4px;
+    background-color: white;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
