--- a/Frontend/styles/index.css
+++ b/Frontend/styles/index.css
@@ -111,13 +111,13 @@ a {
 }
 /* nav css complete here */
 
-video{
+.video{
   object-fit: cover;
   position: relative;
   right: 0;
   bottom: 0;
   z-index: -1;
-  width: 100%;
+  width: 10%;
   top: 3px;
   height: 500px;
 }
