--- a/Frontend/request/bookingPage.css
+++ b/Frontend/request/bookingPage.css
@@ -1,4 +1,3 @@
-
 *{
     /* width: 90%; */
     justify-content: center;
@@ -59,10 +58,13 @@ display: flex;
     font-size: large; 
     border-radius: 10px;
 }
+/* #cartbox div{
+    gap: 50px;
+} */
 
 #acc{
     background-color: green;
-    margin: 5px;
+    /* margin: 20px; */
 }
 #rej{
     background-color: rgb(236, 14, 14);
@@ -75,11 +77,12 @@ display: flex;
     color: rgb(255, 255, 255);
     background-color: blue;
     margin-top: 5px;
+    /* padding-right: 60px; */
 }
 #headline div{
     display: flex;
     gap: 20px;
-    padding-left: 15px;
+    padding-left: 5px;
 }
 
 #left{
@@ -116,9 +119,13 @@ display: flex;
 }
 #details{
     width: 40%;
+    height: auto;
     padding: 10px;
     margin-left: 10px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+#details h2{
+color: blue;
 }
 .icon{
     display: flex;
@@ -181,5 +188,3 @@ width: 15px;
 .end h3{
     color: aliceblue;
 }
-
-
